--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href=".//images/icon.png" >
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 <link rel="stylesheet" href=".//style.css">
+<link rel="stylesheet" href=".//media.css">
 
     <title>Lashed By Kenny</title>
 </head>
@@ -15,7 +16,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" id="brand" href="#">Lashed By Kenny<img id="brandImg" src=".//images/icon.png" alt=""></a> 
+              <a class="navbar-brand" id="brand" href="#">Lashed By Kenny<img id="brandImg" src=".//images/Lashed By Kenny-1 (2).png" alt=""></a> 
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
