added a hero image and some text on it

--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
           </nav>
     </header>
 
+    <section>
+      <div class="container-fluid hero">
+        <div class="container heroMG">
+<div class="heroQ"><h2>Beauty with out expression is boring, allow me to show case you're beauty</h2></div>
+        </div>
+      </div>
+    </section>
+
 
 
 
