added html files for links to follow

--- a/policies.html
+++ b/policies.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href=".//style.css">
 <link rel="stylesheet" href=".//media.css">
 
-    <title>Lashed By Kenny</title>
+    <title>Policies</title>
 </head>
 <body>
     <header>
@@ -60,15 +60,8 @@
           </nav>
     </header>
 
-    <section>
-      <div class="container-fluid hero">
-        <div class="container heroMG">
-<div class="heroQ"><h2>Beauty with out expression is boring, allow me to show case your beauty</h2></div>
-        </div>
-      </div>
-    </section>
 
-
+    <h1>Policies under development</h1>
 
 
 
