added footer, about sections, images and links

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 <link rel="stylesheet" href=".//style.css">
 <link rel="stylesheet" href=".//media.css">
-
+<script src="https://kit.fontawesome.com/6dc0c66aa2.js" crossorigin="anonymous"></script>
     <title>Lashed By Kenny</title>
 </head>
 <body>
@@ -30,7 +30,7 @@
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Policies
                     </a>
-                    <ul class="dropdown-menu">
+                    <ul class="dropdown-menu" >
                       <li><a class="dropdown-item" href=".//policies.html">Deposit Policy</a></li>
                       <li><a class="dropdown-item" href=".//policies.html">Late Policy</a></li>
                       <li><a class="dropdown-item" href=".//policies.html">Cancelation Policy</a></li>
@@ -41,7 +41,10 @@
                     </ul>
                   </li>
 
-
+                  <li class="nav-item">
+                    <a class="nav-link active l" aria-current="page" href="#about">About</a>
+                    <!-- include a book now button that will take them to book now  -->
+                  </li>
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href=".//services.html">Services</a>
                     <!-- include a book now button that will take them to book now  -->
@@ -69,9 +72,35 @@
     </section>
 
 
+    <section id="about">
+      <div class="container-fluid ss">
+        <div class="container about1">
+          
+          <div class="about content">
+            <h2>About</h2>
+<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit accusamus pariatur numquam minus, laudantium officiis aliquam excepturi in deserunt nisi sint at illum fuga quia tempore sequi iure veritatis quaerat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore omnis voluptate voluptates veritatis nulla non cumque quod adipisci tempora aliquam laboriosam nisi, et nemo eum tempore? Voluptatibus deleniti perspiciatis consectetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex amet mollitia necessitatibus libero quo harum delectus reiciendis a voluptate, tempore voluptas consequatur debitis. Voluptatibus molestiae aliquam soluta voluptatum fugiat a! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt a nulla, explicabo ex qui mollitia magni nemo beatae vitae voluptatem in est obcaecati, nam saepe vero eius quos nihil exercitationem!</p>
+          </div>
+          <div class="about aboutImg">
+           <img src=".//images/ModelForAbout.jpeg" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+    
 
 
 
+
+<footer>
+  <div class="container-fluid footerMain">
+    <div class="footer">
+      <div class="fCon"><h6>Copyright © 2022 Lashed By Kenny.</h6></div>
+      <div class="fCon"> <a target="_blank" id="insta" href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+        <a href="#">Privacy Policy</a>
+      </div>
+    </div>
+  </div>
+</footer>
 
 
 <script src=".//script.js"></script>
