--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
 
-                <ul class="navbar-nav">
+                <ul class="navbar-nav" id="navLinks">
 
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
