site is almost fully resposive also added some coloring

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
                     <ul class="dropdown-menu" >
                       <li><a class="dropdown-item" href="#about">About</a></li>
                       <li><a class="dropdown-item" href="#clientsR">Recent Clients</a></li>
+                      <li><a class="dropdown-item" href="#important">How to Book</a></li>
+
                       <li><a class="dropdown-item" href="#gallery">Gallery</a></li>
                       
 
@@ -111,15 +113,33 @@
         <div class="clientCon C3"><p></p></div>
         <div class="clientCon C4"><p></p></div>
         <div class="clientCon C5"><p></p></div>
+        <div class="clientCon C6"><p></p></div>
       </div>
     </div>
 
     </section>
-    
 
+    <section id="important">
+      <div class="container-fluid howToBook">
+        <div class="container howToBookChild">
+          <div class="hTBHeader">
+            <h2>Important! How to book </h2>
+          </div>
+          <div class="hTBInstructions">
+            <p> <span>Important</span>  please read thoroughly follow these intructions in order to be able to secure a reservation.</p>
+            <ol>
+              <li>Click on Menu button or Nav Bar</li>
+              <li>Click on "book Now" see availability</li> 
+              <li>Confirm booking</li>
+              <li>Click on services & purchase desired service</li>
+              <li>Confirmation will be sent to you once both proccess are complete</li>
+            </ol> 
+            <h3>Thanks</h3>
+          </div>
+        </div>
 
-
-
+      </div>
+    </section>
 <footer>
   <div class="container-fluid footerMain">
     <div class="footer">
