--- a/bookNow.html
+++ b/bookNow.html
@@ -26,21 +26,11 @@
 
                 <ul class="navbar-nav">
 
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Policies
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href=".//policies.html">Deposit Policy</a></li>
-                      <li><a class="dropdown-item" href=".//policies.html">Late Policy</a></li>
-                      <li><a class="dropdown-item" href=".//policies.html">Cancelation Policy</a></li>
-                      <li><a class="dropdown-item" href=".//policies.html">Lash With A Friend Policy</a></li>
-                      <li><a class="dropdown-item" href=".//policies.html">Model's Policy</a></li>
-                      
 
-                    </ul>
-                  </li>
-
+                      <ul class="navbar-nav" id="navLinks">
+                      <li class="nav-item">
+                       <a class="nav-link active" href=".//policies.html">Policies</a>
+                       </li>
 
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href=".//services.html">Services</a>
@@ -68,7 +58,7 @@
 
 
 
-<script src=".//script.js"></script>
+<!-- <script src=".//script.js"></script> -->
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
