--- a/bookNow.html
+++ b/bookNow.html
@@ -9,6 +9,8 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 <link rel="stylesheet" href=".//style.css">
 <link rel="stylesheet" href=".//media.css">
+<script src="https://kit.fontawesome.com/6dc0c66aa2.js" crossorigin="anonymous"></script>
+
 
     <title>Book Now</title>
 </head>
@@ -57,7 +59,16 @@
 
 
 
-
+    <footer>
+      <div class="container-fluid footerMain">
+        <div class="footer">
+          <div class="fCon"><h6>Copyright © 2022 Lashed By Kenny.</h6></div>
+          <div class="fCon"> <a target="_blank" id="insta" href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#">Privacy Policy</a>
+          </div>
+        </div>
+      </div>
+    </footer>
 <!-- <script src=".//script.js"></script> -->
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
