added minor changes

--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
             <h2>Important! How to book </h2>
           </div>
           <div class="hTBInstructions">
-            <p> <span>Important</span>  please read thoroughly follow these intructions in order to be able to secure a reservation.</p>
+            <p> <span>Important  please read thoroughly follow these intructions in order to be able to secure a reservation.</p></span>
             <ol>
-              <li>Click on Menu button or Nav Bar</li>
+              <li>Click on Menu button / Nav Bar</li>
               <li>Click on "book Now" see availability</li> 
               <li>Confirm booking</li>
               <li>Click on services & purchase desired service</li>
