fixed all headers to match the home page header

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     <section>
       <div class="container-fluid hero">
         <div class="container heroMG">
+          <h2>Lashed By Kenny</h2>
         </div>
       </div>
     </section>
