added links to client on all html pages, and created clients page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     </a>
                     <ul class="dropdown-menu" >
                       <li><a class="dropdown-item" href="#about">About</a></li>
-                      <li><a class="dropdown-item" href="#clientsR">Recent Clients</a></li>
+                      <li><a class="dropdown-item" href=".//clients.html">Recent Clients</a></li>
                       <li><a class="dropdown-item" href="#important">How to Book</a></li>
 
                       <!-- <li><a class="dropdown-item" href="#gallery">Gallery</a></li> -->
