--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
   
           </div>
           <div class="about aboutImg">
-           <img src=".//images/Kenza.jpg" alt="Owner of Lashed by Kenny">
+           <img src=".//images/IMG_1869.jpeg" alt="Owner of Lashed by Kenny">
           </div>
         </div>
       </div>
