--- a/bookNow.html
+++ b/bookNow.html
@@ -81,8 +81,17 @@
       </nav>
 </header>
 
+<section id="alertFeild">
 
-    <h1>BookNow under development</h1>
+<div class="container-fluid">
+  <div class="container alertCon">
+    <div class="con alertChild">
+      <p class="dynamicP">You have successfully read the terms and policies Thanks you.</p>
+    </div>
+    
+  </div>
+</div>
+</section>
 
 
 
@@ -99,6 +108,7 @@
         </div>
       </div>
     </footer>
+    <script src=".//bookNow.js"></script>
 <!-- <script src=".//script.js"></script> -->
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
