--- a/bookNow.html
+++ b/bookNow.html
@@ -91,7 +91,28 @@
     
   </div>
 </div>
-</section>
+</section> 
+
+<!-- <section id="calender">
+  <div class="container-fluid mainCalCon">
+    <div class="container calander">
+      <div class="con calanderChild" id="calendly">
+       <!-- Calendly inline widget begin -->
+<!-- <div class="calendly-inline-widget" data-url="https://calendly.com/luisjsm/book-event?primary_color=ea38dd" style="width:800px;height:390px;"></div>
+<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+<!-- Calendly inline widget end -->
+      <!-- </div>
+    </div>
+  </div>
+</section> -->
+
+<!-- <section>
+  <h1>This section is just to make the website larger testing a feature out</h1>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum est adipisci enim cum deleniti. Aspernatur eum, omnis pariatur voluptatem reiciendis cumque dolorem soluta ipsam nostrum aut tenetur voluptates dicta possimus.
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis rem adipisci, suscipit, eligendi dolorem, dolor cupiditate facere accusantium ex ad doloremque corrupti fuga deserunt porro saepe in consequuntur beatae. Commodi. 
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta, iste ut consequatur quod totam ullam laboriosam sed tempore quaerat sint culpa. Dolore nam natus iure facere ab ad aliquam tempora?
+  </p>
+</section> -->
 
 
 
@@ -111,6 +132,7 @@
     <script src=".//bookNow.js"></script>
 <!-- <script src=".//script.js"></script> -->
     <!-- JavaScript Bundle with Popper -->
+    <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
