added my own changes to the site, including color schemes with and some mobile sizing

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="container about1">
           
           <div class="about content">
-            <h2>About</h2>
+            <h2>Welcome</h2>
 <p>Hello loves, My name is Kenza Hassani, I am a certified lash tech located in RVA/ NOVA.
   I ask to please come to your appointment with a bare face (no makeup or left over mascara). I ask all my clients to please communicate with me, i am a very undertsafing person, I understand that things can happen/ come up  so please make sure that you are communicating with me. Please be aware of the my duration time, I am very time conscious but I do my work neat and precise, it is NOT rushed.
   </p>
