--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   </li> -->
 
                 <ul class="navbar-nav" id="navLinks">
-                  <li class="nav-item dropdown">
+                  <!-- <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Menu
                     </a>
@@ -38,11 +38,11 @@
                       <li><a class="dropdown-item" href=".//clients.html">Recent Clients</a></li>
                       <!-- <li><a class="dropdown-item" href="#important">How to Book</a></li> -->
 
-                      <!-- <li><a class="dropdown-item" href="#gallery">Gallery</a></li> -->
+                      <!-- <li><a class="dropdown-item" href="#gallery">Gallery</a></li> 
                       
 
                     </ul>
-                  </li>
+                  </li>-->
 
              
                   <!-- <li class="nav-item dropdown">
@@ -125,7 +125,7 @@
   
           </div>
           <div class="about aboutImg">
-           <img src=".//images/IMG_1869.jpeg" alt="Owner of Lashed by Kenny">
+           <img src=".//images/mainCEOIMG.jpg" alt="Owner of Lashed by Kenny">
           </div>
         </div>
       </div>
