added booking page almost done

--- a/index.html
+++ b/index.html
@@ -213,6 +213,33 @@
             <h3>If you are interested in being a model and getting your lash set at no cost, please email or text me the set you would want to be done. PLEASE DO NOT BOOK until I confirm with you. I am only taking 12 models for the month of October/ November. 3 models for each set (first comes first served.)</h3>
           
           </div>
+
+          <div class="afterCare L">
+            <h2>After Care</h2>
+            <h3>Do not get the lashes wet for the first 24-48 hours including
+              Steam, Tears, Showering, Swimming, Eye Makeup Remover. This is crucial to get the best retention possible! Brush your lashes straight as needed, but never when they are wet! No oil-based products Do not touch, play with, or pick at your Lashes! Please do not use the lash curler on them.
+              </h3>
+          </div>
+
+          <div class="refill L">
+            <h2>Refill Policy</h2>
+            <h3>Refills range from 1 week to 4 weeks fill.  </h3>
+            <ul>
+              <li>You will need 40% of your extensions on both eyes to be considered a fill. if not you will be charged for a full set (if you are uncertain about the percentage of lashes still on, please send me a picture and I will be happy to assist ). </li>
+              <li>After 3 refills, you will have to book a full set ( NO EXCEPTION!).</li>
+            </ul>
+          </div>
+
+          <div class="risks L">
+            <h2>  Risks Associated With Lash Extensions!!
+            </h2>
+            <h3>There are risks and side effects to getting eyelash extensions. Do your research, know the risks, know you could get irritated, you could have a reaction to the glue, you could get a red eye for those who have sensitive eyes, you may get swollen eyelids, irritation, you may temporarily or permanently lose your natural lashes and more. Deciding to get this service is an option and it is your choice. It is definitely not for everyone. You are making this appointment at your own risk and "Lahsed with Kenny" or anyone working here is not liable for any side effects you may experience.
+              The client should contact me within 2 days of application with any concerns. Pictures and videos are required to back up the client's statement. Keep in mind, lashes are not for everybody, as they may be uncomfortable for some who are not used to them, especially first-timers. This service is non-refundable, so clients should consider all these factors before booking.
+              </h3>
+          </div>
+
+
+
         </div>
       </div>
     </section>
