added changes in all files

--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
   </p>
   
           </div>
-          <div class="about aboutImg">
+          <!-- <div class="about aboutImg">
            <img src=".//images/mainCEOIMG.jpg" alt="Owner of Lashed by Kenny">
-          </div>
+          </div> -->
         </div>
       </div>
     </section> 
