worked on booking page

--- a/bookNow.html
+++ b/bookNow.html
@@ -87,12 +87,22 @@
 <div class="container-fluid">
   <div class="container alertCon">
     <div class="con alertChild">
-      <p class="dynamicP">You have successfully read the terms and policies Thanks you.</p>
+      <p class="dynamicP">Thank you for successfully reading the terms and policies.</p>
+      <div class="selectLoc">
+        <p>Please select area near you. Thanks you. </p>
+      </div>
     </div>
+    <div class="con locations">
+      <div class="loc"> <button class="locB">Rva</button></div>
+      <div class="locc"> <button class="locB">Nova</button></div>
+     
+    </div>
+
     
   </div>
 </div>
 </section> 
+
 
 <section id="calender">
   <div class="container-fluid calCon">
