--- a/index.html
+++ b/index.html
@@ -244,8 +244,59 @@
       </div>
     </section>
 
-    <section id="contact"></section>
-    <section id="services"></section>
+    
+    <section id="services">
+      <div class="servoces L">
+        <h2>Services
+        </h2>
+      </div>
+      <div class="container-fluid">
+        <div class="container servicesCon">
+          <div class="contentser cons1">
+         <ul>
+           <li>Classic Sets</li>
+           <li>Hybrid Sets</li>
+           <li>Volume Sets</li>
+         </ul>
+          </div>
+          <div class="contentser cons2">
+      <ul>
+        <li>Lash Fills</li>
+        <li>Removal</li>
+        <li>Modeling</li>
+
+
+        </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+
+    <section id="contact">
+      <div class="contact L">
+        <h2>Contact Me
+        </h2>
+      </div>
+      <div class="container contactConM">
+        <div class="Contact">
+          <a href="mailto:luisdevops0@gmail.com"> <span id="mail">Email:</span> YourEmail@gmail.com</a>
+        </div>
+      </div>
+
+
+    </section>
+   
+    <section id="bookNowBtn" >
+      <div class="container-fluid">
+        <div class="container bookNowHolder">
+          <div class="btnholder">
+            <a href=".//bookNow.html">Book Now</a>
+          </div>
+        </div>
+      </div>
+    </section>
 
 <footer>
   <div class="container-fluid footerMain">
