still working on booking page

--- a/bookNow.html
+++ b/bookNow.html
@@ -93,8 +93,8 @@
       </div>
     </div>
     <div class="con locations">
-      <div class="loc"> <button class="locB">Rva</button></div>
-      <div class="locc"> <button class="locB">Nova</button></div>
+      <div class="loc"> <button class="locB" id="rva">Rva</button></div>
+      <div class="locc"> <button class="locB" id="nova">Nova</button></div>
      
     </div>
 
