working on booking page

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
 
 
-    <section id="contact">
+    <section id="contactS">
       <div class="contact L">
         <h2>Contact Me
         </h2>
