made changes to file

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 <script src="https://kit.fontawesome.com/6dc0c66aa2.js" crossorigin="anonymous"></script>
 
+<!-- Making this comment to fix branch -->
+
     <title>Lashed By Kenny</title>
 </head>
 <body>
