fixed the calander to match the right email

--- a/rvaBookPage.html
+++ b/rvaBookPage.html
@@ -119,7 +119,7 @@
   <div class="container-fluid calCon">
     <div class="con calMain" id="calConMain">
    <!-- Calendly inline widget begin -->
-<div id="rvaMainCon" class="calendly-inline-widget"  style="min-width:320px;height:1000px;" data-url="https://calendly.com/testingcalen123/30min?background_color=1a1a1a&text_color=ffffff&primary_color=e0afce"></div>
+<div id="rvaMainCon" class="calendly-inline-widget"  style="min-width:320px;height:1000px;" data-url="https://calendly.com/lafleurstudioo/booking?primary_color=ff8fbe"></div>
 
 
 <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
@@ -318,7 +318,7 @@
         </div>
       </div>
     </footer>
-    <script src=".//bookNow.js"></script>
+    <script src=".//bookNow.js"></>
 <!-- <script src=".//script.js"></script> -->
     <!-- JavaScript Bundle with Popper -->
     <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
