--- a/rvaBookPage.html
+++ b/rvaBookPage.html
@@ -318,7 +318,7 @@
         </div>
       </div>
     </footer>
-    <script src=".//bookNow.js"></>
+    <script src=".//bookNow.js"></script>
 <!-- <script src=".//script.js"></script> -->
     <!-- JavaScript Bundle with Popper -->
     <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
