added changes to the fonts

--- a/rvaBookPage.html
+++ b/rvaBookPage.html
@@ -161,7 +161,7 @@
          <div class="lightSet L">
           <h2>Lash With A Friend Deal</h2>
        <h3>Classic set 
-        (2h 00 mins for each client ) for $120 total for both clients <a class="buyNow" href="#">Buy</a>  </h3>
+        (2h 00 mins for each client ) for $120 <a class="buyNow" href="#">Buy</a>  </h3>
        <p>
         <!-- <a class="buyNow" href="#">Buy</a>  -->
   
@@ -171,7 +171,7 @@
   
         <div class="classicSet L">
        <h3>Hybrid set 
-        (2h 30 mins for each client ) for $140 total for both clients <a class="buyNow" href="#">Buy</a>
+        (2h 30 mins for each client ) for $140 <a class="buyNow" href="#">Buy</a>
         </h3>
        <!-- <p>(2h 10 mins for each client ) for $105 total for both clients <a class="buyNow" href="#">Buy Now</a>
       </p> -->
@@ -179,7 +179,7 @@
   
         <div class="HybridSet L">
           <h3>Volume set 
-            (3h 00 mins for each client) for $160 total for both clients  <a class="buyNow" href="#">Buy</a></h3>
+            (3h 00 mins for each client) for $160  <a class="buyNow" href="#">Buy</a></h3>
           <!-- <p>(2h 45 mins for each client ) for $115 total for both clients
             <a class="buyNow" href="#">Buy Now</a>
          </p> -->
