added one working link for full set to test

--- a/rvaBookPage.html
+++ b/rvaBookPage.html
@@ -130,7 +130,7 @@
         <h2>Full Sets</h2>
      <h3>Classic set (2h 00 mins) for $75</h3>
      <p>This set is for my natural lovers ! I will place 1 fake lash extension on top of each individual natural lash, classic lashes will give you a natural everyday look.
-      <a class="buyNow" href="#">Buy</a> 
+      <a class="buyNow" href="https://square.link/u/XGMGfToT" target="_blank" >Buy</a> 
     </p>
      
       </div>
