--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <!-- Making this comment to fix branch -->
 
-    <title>La Fleur Stuio</title>
+    <title>La Fleur Studio</title>
 </head>
 <body>
     <header>
