--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           <div class="about content">
             <h2>Welcome</h2>
 <p>Hello loves, My name is Kenza Hassani, I am a certified lash tech located in RVA.
-  I ask to please come to your appointment with a bare face (no makeup or left over mascara). I ask all my clients to please communicate with me, I am a very undertsafing person, I understand that things can happen/ come up so please make sure that you are communicating with me. Please be aware of the my duration time, I am very time conscious but I do my work neat and precise, it is NOT rushed.
+  I ask to please come to your appointment with a bare face (no makeup or left over mascara). I ask all my clients to please communicate with me, I am a very understanding person, I understand that things can happen/ come up so please make sure that you are communicating with me. Please be aware of the my duration time, I am very time conscious but I do my work neat and precise, it is NOT rushed.
   </p>
   
           </div>
@@ -231,12 +231,12 @@
             </li>
           </ul>
           </div> 
-          <div class="modelsPo L">
+          <!-- <div class="modelsPo L">
             
             <h2>Model's Policy</h2>
             <h3>If you are interested in being a model and getting your lash set at no cost, please email or text me the set you would want to be done. PLEASE DO NOT BOOK until I confirm with you. I am only taking 12 models for the month of October/ November. 3 models for each set (first comes first served.)</h3>
           
-          </div>
+          </div> -->
 
           <div class="afterCare L">
             <h2>After Care</h2>
