--- a/index.html
+++ b/index.html
@@ -328,14 +328,15 @@
     <div class="footer">
       <div class="fCon"><h6>Copyright © 2022 La Fleur Stuio. </h6></div>
       <div class="fCon"> <a target="_blank" id="insta" href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
-        <a href="#">Privacy Policy</a>
+        <a href="https://www.facebook.com/" target="_blank" id="facebook"><i class="fa-brands fa-facebook"></i></a>
+        <a href=".//privicyPolicy.html">Privacy Policy</a>
       </div>
     </div>
   </div>
 </footer>
 
 
-<script src=".//script.js"></script>
+<!-- <script src=".//script.js"></script> -->
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
