fixed targets in anchor tags for all buy now btns

--- a/privicyPolicy.html
+++ b/privicyPolicy.html
@@ -92,6 +92,7 @@
                  <h2>Privicy Policy</h2> 
                 </div>
                 <div class="content">
+                  <h1>Under Development</h1>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non architecto alias eaque, possimus reiciendis esse iure quasi adipisci, optio beatae perspiciatis facere accusamus sit repellendus porro doloribus maxime, laudantium aspernatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem modi nisi minima fuga, perferendis consectetur id necessitatibus deserunt totam similique dignissimos laudantium! Id dolorem similique unde aperiam! Ullam, ipsa quas. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, voluptatum? Vel, officiis temporibus. Itaque magnam, asperiores accusamus assumenda consequuntur perferendis iusto dolore facere, vero sunt ab soluta voluptatem dolorum quo! Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim accusantium aut officiis corporis quo soluta, voluptas laudantium eius perspiciatis unde earum totam magni molestiae voluptatem qui fuga veniam dolores? Eos? Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias minus repellendus repellat nemo tenetur cum tempore rem tempora non illum architecto quis asperiores nulla ducimus facere, amet aut aspernatur in.</p>
                 </div>
             </div>
