--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <h2>Deposite Policy</h2>
           <h3>Your appointment is NOT confirmed until you make a NON-refundable deposit of $35 at the time of your booking.</h3>
           <ul>
-            <li>The deposit must be made WITHIN 2 hours of your booking otherwise your appointment will be CANCELED. </li>
+            <li>The deposit must be made WITHIN 2 hours of your booking otherwise your appointment will be CANCELED. Please make sure to check availability before booking. </li>
             <li>Final payments can be made with a card or cash. (If the remaining amount is paid with a card there will be a small fee added to your final amount.)</li>
           </ul>
           </div>
@@ -249,7 +249,7 @@
           <div class="risks L">
             <h2>  Risks Associated With Lash Extensions!!
             </h2>
-            <h3>There are risks and side effects to getting eyelash extensions. Do your research, know the risks, know you could get irritated, you could have a reaction to the glue, you could get a red eye for those who have sensitive eyes, you may get swollen eyelids, irritation, you may temporarily or permanently lose your natural lashes and more. Deciding to get this service is an option and it is your choice. It is definitely not for everyone. You are making this appointment at your own risk and "Lahsed with Kenny" or anyone working here is not liable for any side effects you may experience.
+            <h3>There are risks and side effects to getting eyelash extensions. Do your research, know the risks, know you could get irritated, you could have a reaction to the glue, you could get a red eye for those who have sensitive eyes, you may get swollen eyelids, irritation, you may temporarily or permanently lose your natural lashes and more. Deciding to get this service is an option and it is your choice. It is definitely not for everyone. You are making this appointment at your own risk and "La Fleur Studio" or anyone working here is not liable for any side effects you may experience.
               The client should contact me within 2 days of application with any concerns. Pictures and videos are required to back up the client's statement. Keep in mind, lashes are not for everybody, as they may be uncomfortable for some who are not used to them, especially first-timers. This service is non-refundable, so clients should consider all these factors before booking.
               </h3>
           </div>
@@ -327,13 +327,14 @@
   <div class="container-fluid footerMain">
     <div class="footer">
       <div class="fCon"><h6>Copyright © 2022 La Fleur Stuio. </h6></div>
-      <div class="fCon"> <a target="_blank" id="insta" href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+      <div class="fCon"> <a target="_blank" id="insta" href="https://www.instagram.com/la_fleur_studioo/"><i class="fa-brands fa-instagram"></i></a>
         <a href="https://www.facebook.com/" target="_blank" id="facebook"><i class="fa-brands fa-facebook"></i></a>
         <a href=".//privicyPolicy.html">Privacy Policy</a>
       </div>
     </div>
   </div>
 </footer>
+<!--  -->
 
 
 <!-- <script src=".//script.js"></script> -->
