--- a/rvaBookPage.html
+++ b/rvaBookPage.html
@@ -89,7 +89,7 @@
 <div class="container-fluid">
   <div class="container alertCon">
     <div class="con alertChild">
-      <p class="dynamicP">Thank you for reading the terms and policies.<span id="seasonPromotion"> November and December all lashes are 60$</span> </p>
+      <p class="dynamicP">Thank you for reading the terms and policies.<span id="seasonPromotion"> November and December all lashes are 70$</span> </p>
       <!-- <div class="selectLoc">
         <p>Please select the area near you. Thank you. </p>
       </div> -->
@@ -319,7 +319,7 @@
       <div class="container-fluid footerMain">
         <div class="footer">
           <div class="fCon"><h6>Copyright © 2022 La Fleur Stuio.</h6></div>
-          <div class="fCon"> <a target="_blank" id="insta" href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+          <div class="fCon"> <a target="_blank" id="insta" href="https://www.instagram.com/la_fleur_studioo/"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://www.facebook.com/" target="_blank" id="facebook"><i class="fa-brands fa-facebook"></i></a>
             <a href=".//privicyPolicy.html">Privacy Policy</a>
           </div>
