--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                       </a>
                       <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href=".//rvaBookPage.html">Richmond Va</a></li>
-                        <!-- <li><a class="dropdown-item" href=".//novaBookPage.html">Nova</a></li> -->
+                        <li><a class="dropdown-item" href=".//availability.html">Availability</a></li>
                         
                         
                       </ul>
