--- a/deposit.html
+++ b/deposit.html
@@ -15,7 +15,7 @@
 <script src="https://kit.fontawesome.com/6dc0c66aa2.js" crossorigin="anonymous"></script>
 
 
-    <title>La Fleur Deposite</title>
+    <title>La Fleur Deposit</title>
 </head>
 <body>
   <header>
