--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                       </a>
                       <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href=".//rvaBookPage.html">Richmond Va</a></li>
-                        <li><a class="dropdown-item" href=".//availability.html">Availability</a></li>
+                        <li><a class="dropdown-item" href=".//availability.html">Deposit</a></li>
                         
                         
                       </ul>
@@ -179,7 +179,7 @@
         </div>
         <div class="container policies">
           <div class="depoPo L">
-            <h2>Deposite Policy</h2>
+            <h2>Deposit Policy</h2>
           <h3>Your appointment is NOT confirmed until you make a NON-refundable deposit of $35 at the time of your booking.</h3>
           <ul>
             <li>The deposit must be made WITHIN 2 hours of your booking otherwise your appointment will be CANCELED. Please make sure to check availability before booking. </li>
