--- a/rvaBookPage.html
+++ b/rvaBookPage.html
@@ -130,7 +130,7 @@
              <div id="rvaMainCon" class="calendly-inline-widget"  style="min-width:320px;height:1000px;" data-url="https://calendly.com/lafleurstudioo/booking?primary_color=ff8fbe"></div>
              <div class="container bookNowHolder">
               <div class="btnholder">
-                <a href=".//availability.html">Deposite Now</a>
+                <a href=".//deposit.html">Deposite Now</a>
               </div>
               <!-- <div class="btnholder">
                 <a href=".//novaBookPage.html">Nova Booking</a>
