changed rva booking with availability rva

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         Book Now
                       </a>
                       <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href=".//rvaBookPage.html">Richmond Va</a></li>
+                        <li><a class="dropdown-item" href=".//rvaBookPage.html">Availability Rva</a></li>
                         <li><a class="dropdown-item" href=".//deposit.html">Deposit</a></li>
                         
                         
