--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" id="brand" href=".//index.html">La Fleur Stuio<img id="brandImg" src=".//images/Lashed By Kenny-1 (2).png" alt=""></a> 
+              <a class="navbar-brand" id="brand" href=".//index.html">La Fleur Studio<img id="brandImg" src=".//images/Lashed By Kenny-1 (2).png" alt=""></a> 
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -98,7 +98,7 @@
     <section>
       <div class="container-fluid hero">
         <div class="container heroMG">
-          <h2>La Fleur Stuio</h2>
+          <h2>La Fleur Studio</h2>
         </div>
       </div>
     </section> 
@@ -314,7 +314,7 @@
         
         <div class="container bookNowHolder">
           <div class="btnholder">
-            <a href=".//rvaBookPage.html">Book Now</a>
+            <a href=".//deposit.html">Deposit</a>
           </div>
           <!-- <div class="btnholder">
             <a href=".//novaBookPage.html">Nova Booking</a>
