--- a/deposit.html
+++ b/deposit.html
@@ -21,7 +21,7 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" id="brand" href=".//index.html">La Fleur Stuio<img id="brandImg" src=".//images/Lashed By Kenny-1 (2).png" alt=""></a> 
+          <a class="navbar-brand" id="brand" href=".//index.html">La Fleur Studio<img id="brandImg" src=".//images/Lashed By Kenny-1 (2).png" alt=""></a> 
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -256,6 +256,10 @@
                          <p>Eyelash removals include a lash bath after the removal.<a class="buyNow" href="https://square.link/u/9qqLriTH" target="_blank">Buy</a> </p>
                          
                           </div>
+                          <div class="container bookNowHolder">
+                            <div class="btnholder">
+                              <a href=".//rvaBookPage.html">Check Availability</a>
+                            </div>
             
 
 
@@ -311,7 +315,7 @@
     <footer>
       <div class="container-fluid footerMain">
         <div class="footer">
-          <div class="fCon"><h6>Copyright © 2022 La Fleur Stuio.</h6></div>
+          <div class="fCon"><h6>Copyright © 2022 La Fleur Studio.</h6></div>
           <div class="fCon"> <a target="_blank" id="insta" href="https://www.instagram.com/la_fleur_studioo/"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://www.facebook.com/" target="_blank" id="facebook"><i class="fa-brands fa-facebook"></i></a>
             <a href=".//privicyPolicy.html">Privacy Policy</a>
