--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 <footer>
   <div class="container-fluid footerMain">
     <div class="footer">
-      <div class="fCon"><h6>Copyright © 2022 La Fleur Stuio. </h6></div>
+      <div class="fCon"><h6>Copyright © 2022 La Fleur Studio. </h6></div>
       <div class="fCon"> <a target="_blank" id="insta" href="https://www.instagram.com/la_fleur_studioo/"><i class="fa-brands fa-instagram"></i></a>
         <a href="https://www.facebook.com/" target="_blank" id="facebook"><i class="fa-brands fa-facebook"></i></a>
         <a href=".//privicyPolicy.html">Privacy Policy</a>
