--- a/deposit.html
+++ b/deposit.html
@@ -267,7 +267,7 @@
                           </div>
                           <div class="container bookNowHolder">
                             <div class="btnholder">
-                              <a href=".//rvaBookPage.html">Check Availability</a>
+                              <a href=".//rvaBookPage.html">Availability</a>
                             </div>
             
 
