--- a/privicyPolicy.html
+++ b/privicyPolicy.html
@@ -30,7 +30,7 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" id="brand" href=".//index.html">La Fleur Stuio<img id="brandImg" src=".//images/Lashed By Kenny-1 (2).png" alt=""></a> 
+          <a class="navbar-brand" id="brand" href=".//index.html">La Fleur Studio<img id="brandImg" src=".//images/Lashed By Kenny-1 (2).png" alt=""></a> 
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -117,7 +117,7 @@
     <footer>
       <div class="container-fluid footerMain">
         <div class="footer">
-          <div class="fCon"><h6>Copyright © 2022 La Fleur Stuio.</h6></div>
+          <div class="fCon"><h6>Copyright © 2022 La Fleur Studio.</h6></div>
           <div class="fCon"> <a target="_blank" id="insta" href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://www.facebook.com/" target="_blank" id="facebook"><i class="fa-brands fa-facebook"></i></a>
             <a href="#">Privacy Policy</a>
