--- a/rvaBookPage.html
+++ b/rvaBookPage.html
@@ -98,7 +98,7 @@
 <div class="container-fluid">
   <div class="container alertCon">
     <div class="con alertChild">
-      <p class="dynamicP">Thank you for reading the terms and policies.<span id="seasonPromotion"> November and December all lashes are 70$</span> </p>
+      <p class="dynamicP">Thank you for reading the terms and policies. </p>
       <!-- <div class="selectLoc">
         <p>Please select the area near you. Thank you. </p>
       </div> -->
